# Archer

./: .gitignore  CMakeLists.txt  README.md  dummy.lox
benchmarks/: binary_tree.lox  fibonacci.lox  linked_list.lox  matrices.lox  remainder.lox  string_interpolation.lox
lang-benchmarks/: fibonacci.archer  linked_list.archer  matrices.archer  string_interpolation.archer
lang-ref/: Grammar.md
lang-tests/: comments.archer  literals.archer  scopes.archer
lang-tests/arrays/: arrays.ar
lang-tests/classes/: methods.archer  static.archer
lang-tests/compound-assignment/: locals.archer  properties.archer  side-effects.archer
lang-tests/control-flow/do-while/: continue.archer
lang-tests/control-flow/for/: break.archer  continue.archer
lang-tests/control-flow/for-in/: for-in-loop.archer
lang-tests/control-flow/when/: break.archer  when-statement.archer
lang-tests/control-flow/while/: continue.archer
lang-tests/coroutines/: functions.archer  generators.archer  lambdas.archer  lifecycle.archer  stackful.archer  yield-expression.archer
lang-tests/expressions/: comparison.archer
lang-tests/expressions/lambda/: block-lambda.archer  closures.archer  nested-lambda.archer
lang-tests/expressions/range/: to-string.archer
lang-tests/functions/: block-function.archer  closures.archer  expression-function.archer  recursion.archer
lang-tests/increment-decrement/: globals.archer  properties.archer  side-effects.archer
lang-tests/lists/: literals.archer  multidimensional.archer
lang-tests/maps/: maps.archer
lang-tests/modularity/circular-dependency/: moduleB.archer
lang-tests/modularity/import-all/: main.archer
lang-tests/modularity/import-as/: main.archer
lang-tests/modularity/import-for/: math.archer
lang-tests/modularity/import-scoped-as/: main.archer  math.archer
lang-tests/modularity/import-scoped-for/: main.archer
lang-tests/null-safety/: safe-assignment.archer  safe-navigation.archer
lang-tests/strings/: concatenation.archer  escape-sequences.archer  interpolation.archer  literals.archer
lang-tests/tuples/: unpacking-closure.archer  unpacking-for-in.archer
notes/: CraftingInterpreters.md  Grammar.md  LanguageFeatures.md
scripts/runner/: README.md  runner.py
src/: ast.c  ast.h  astprinter.c  astprinter.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  disassembler.c  disassembler.h  errcode.h  error_code.h  file_reader.c  filereader.c  filereader.h  gc.c  gc.h  library.c  library.h  line.c  line.h  main.c  memlib.c  memlib.h  memory.c  memory.h  obj_coroutine.c  obj_coroutine.h  obj_function.c  obj_iterator.c  obj_iterator.h  obj_list.c  obj_list.h  obj_map.c  obj_module.c  obj_module.h  obj_native.c  (+47 more)
tests/: comments.lox  empty.lox  literals.lox  strings.lox  variables.lox
tests/classes/: inheritance.lox  initializers.lox  instances.lox  methods.lox  super.lox
tests/compound-assignment/: closures.lox  globals.lox  properties.lox  side-effects.lox  subscripts.lox
tests/control-flow/: for-loop.lox  if-else.lox  while-loop.lox
tests/coroutines/: closures.lox  coroutine-expr.lox  methods.lox  nested-coroutine-call.lox
tests/expressions/: arithmetic.lox  bitwise.lox  comparison.lox  conditional.lox  equality.lox  logical.lox
tests/functions/: calls.lox  closures.lox  recursion.lox  references.lox
tests/increment-decrement/: closures.lox  globals.lox  locals.lox  properties.lox  side-effects.lox  subscripts.lox
tests/lists/: methods.lox  safe-assignment.lox  safe-navigation.lox  subscripts.lox
tests/maps/: maps.lox  methods.lox
tests/null-safety/: elvis-operator.lox  safe-assignment.lox
tests/strings/: escape-sequences.lox  methods.lox
tests/tuples/: tuple-expression.lox  unpacking-assignment.lox  unpacking-declaration.lox  unpacking-local.lox
tools/runner/: README.md  runner.py
(+20 files in other folders)
