cmake_minimum_required (VERSION 3.8)

project ("Archer")

if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_definitions(_CRT_SECURE_NO_DEPRECATE)
endif()

add_executable (archer
    "src/main.c"
    "src/opcode.h"
    "src/chunk.c"
    "src/chunk.h"
    "src/common.h"
    "src/compiler.c"
    "src/compiler.h"
    "src/disassembler.c"
    "src/disassembler.h"
    "src/errcode.h"
    "src/memory.c"
    "src/memory.h"
    "src/scanner.c"
    "src/scanner.h"
    "src/table.c"
    "src/table.h"
    "src/value.c"
    "src/value.h"
    "src/vm.c"
    "src/vm.h"
    "src/token.h"
    "src/parser.h"
    "src/parser.c"
    "src/token.c"
    "src/run.c"
    "src/memlib.h"
    "src/memlib.c"
    "src/gc.h"
    "src/gc.c"
    "src/vector.h"
    "src/ast.h"
    "src/ast.c"
    "src/astprinter.h"
    "src/astprinter.c"
    "src/object.h"
    "src/object.c"
    "src/objstring.h"
    "src/objstring.c"
    "src/objnative.h"
    "src/objnative.c"
    "src/objfunction.h"
    "src/objfunction.c"
    "src/library.h"
    "src/library.c"
    "src/objlist.h"
    "src/objlist.c"
    "src/objarray.h"
    "src/objarray.c"
    "src/objmap.h"
    "src/objmap.c"
    "src/objcoroutine.h"
    "src/objcoroutine.c"
    "src/filereader.h"
    "src/filereader.c"
    "src/objmodule.h"
    "src/objmodule.c"
    "src/objiterator.h"
    "src/objiterator.c"
    "src/objrange.h"
    "src/objrange.c"
    "src/objtuple.h"
    "src/objtuple.c"
)
